--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/lab": "^7.0.0-beta.14",
     "@mui/material": "^7.2.0",
     "next": "15.3.4",
+    "nodemailer": "^7.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
